re-adding as test

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1154,7 +1154,8 @@ input, select, textarea {
 					margin-left: 91.6666666667%;
 				}
 
-				.row > .col-12-medium {
+				.row > .col-12-medium {ls
+				
 					width: 100%;
 						
 				}
